# gitlab-agent

./: .bazelrc  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  WORKSPACE  go.mod  go.sum  run_it.sh  test.sh  tools.go
.gitlab/: .gitlab-ci.yml  CODEOWNERS
agentrpc/: BUILD.bazel  agentrpc.pb.go  agentrpc.proto
cmd/: BUILD.bazel  build_info.go  cmd.bzl  utils.go
cmd/agentg/: BUILD.bazel  main.go
cmd/agentg/agentgapp/: BUILD.bazel  app.go
cmd/agentk/: BUILD.bazel  main.go
cmd/agentk/agentkapp/: BUILD.bazel  agentk.go  agentk_test.go  api.go  api_test.go  app.go  config_refresher.go  config_refresher_test.go  feature_tracker.go  feature_tracker_test.go  logz.go  module_runner.go  module_runner_test.go
cmd/cli/: BUILD.bazel  main.go
cmd/cli/generate/: BUILD.bazel  cli.go  generate.go
cmd/kas/: BUILD.bazel  main.go
cmd/kas/kasapp/: BUILD.bazel  api.go  api_test.go  app.go  configured_app.go  defaulting.go  doc.go  extra_methods.go  kas_pool.go  kasapp.pb.go  kasapp.pb.validate.go  kasapp.proto  mock_for_test.go  options.go  router.go  router_agent.go  router_kas.go  router_test.go
cmd/kgb/: BUILD.bazel  main.go
cmd/kgb/kgbapp/: BUILD.bazel  app.go
doc/: BUILD.bazel  architecture.md  config_example_test.go  configuration_repository.md  developing.md  faq.md  gitops.md  identity_and_auth.md  installation.md  kas_config_example.yaml  kas_request_routing.md  kubernetes_ci_access.md  local.md  modules.md  releases.md  repository_overview.md  user-stories.md  user_stories.md
internal/agentcfg/: BUILD.bazel  agentcfg.pb.go  agentcfg.proto
internal/agentk/: BUILD.bazel  agentk.go  agentk_test.go  api.go  api_test.go  deployment_worker.go  deployment_worker_test.go  gitops_worker.go  gitops_worker_test.go  logz.go  resources_filter.go  resources_filter_test.go  sync_worker.go  synchronizer.go  synchronizer_test.go
internal/agentrpc/: BUILD.bazel  agentrpc.pb.go  agentrpc.proto  configuration_watcher.go  configuration_watcher_test.go  obj_to_sync_watcher.go  obj_to_sync_watcher_test.go
internal/agentrpc/mock_agentrpc/: BUILD.bazel  agentrpc.go  doc.go
internal/api/: BUILD.bazel  apiutil.go  log.go  types.go
internal/api/apiutil/: BUILD.bazel  apiutil.go
internal/gitaly/: BUILD.bazel  error.go  error_test.go  feature_flags.go  fetch_visitors.go  fetch_visitors_test.go  path_fetcher.go  path_fetcher_test.go  path_visitor.go  path_visitor_test.go  poller.go  poller_test.go  pool.go  reference_discovery.go  reference_discovery_test.go
internal/gitaly/mock_gitalypool/: BUILD.bazel  doc.go  pool.go
internal/gitaly/mock_internalgitaly/: BUILD.bazel  doc.go  internalgitaly.go
internal/gitaly/pktline/: BUILD.bazel  pkt_line_test.go  pktline.go
internal/gitlab/: BUILD.bazel  cache.go  client.go  client_options.go  client_test.go  do_options.go  error.go  rate_limiter.go  response_handlers.go  types.go
internal/gitlab/api/: BUILD.bazel  get_agent_info.go  get_agent_info_test.go  get_allowed_agents.go  get_project_info.go  get_project_info_test.go  module_request.go  post_agent_configuration.go  post_agent_configuration_test.go  send_usage_ping.go
internal/gitlab/fromworkhorse/: README.md
internal/gitlab/fromworkhorse/roundtripper/: BUILD.bazel  roundtripper.go
internal/gitlab/mock_gitlab/: BUILD.bazel  doc.go  gitlab.go
internal/kas/: BUILD.bazel  api.go  api_test.go  kas.go  kas_get_configuration.go  kas_get_configuration_test.go  kas_get_objects_to_synchronize.go  kas_get_objects_to_synchronize_test.go  kas_test.go  kas_usage_metrics.go  kas_usage_metrics_test.go
internal/module/: README.md
internal/module/agent_configuration/: BUILD.bazel  api.go
internal/module/agent_tracker/: BUILD.bazel  agent_tracker.pb.go  agent_tracker.proto  agent_tracker_test.go  tracker.go  tracker_test.go
internal/module/cilium_alert/: BUILD.bazel  api.go
internal/module/configuration_project/: BUILD.bazel  api.go
internal/module/gitlab_access/: BUILD.bazel  api.go
internal/module/gitops/: BUILD.bazel  api.go
internal/module/google_profiler/: BUILD.bazel  api.go
internal/redis/: BUILD.bazel  redis.go  redis_test.go  token_limiter.go  token_limiter_test.go
it/: BUILD.bazel  it_test.go  main_test.go
pkg/agentcfg/: BUILD.bazel  agentcfg.extra_methods.go  agentcfg.pb.go  agentcfg.pb.validate.go  agentcfg.proto  roundtrip_test.go  validation_test.go
pkg/agentg/: BUILD.bazel  agentg.go
pkg/agentgapp/: BUILD.bazel  app.go
pkg/agentk/: BUILD.bazel  agentk.go  agentk_test.go  deployment_worker.go  reverse_handler.go  synchronizer.go  synchronizer_test.go
pkg/agentkapp/: BUILD.bazel  app.go
pkg/agentrpc/: BUILD.bazel  agentrpc.pb.go  agentrpc.proto
pkg/agentrpc/mock_agentrpc/: BUILD.bazel  agentrpc.go  doc.go
pkg/api/: BUILD.bazel  log.go  types.go
pkg/api/apiutil/: BUILD.bazel  apiutil.go
pkg/gitaly/: BUILD.bazel  pool.go
pkg/gitaly/mock_gitalypool/: BUILD.bazel  doc.go  pool.go
pkg/gitlab/: BUILD.bazel  cache.go  client.go  client_test.go  types.go
pkg/gitlab/fromworkhorse/: README.md
pkg/gitlab/fromworkhorse/roundtripper/: BUILD.bazel
pkg/gitlab/mock_gitlab/: BUILD.bazel  doc.go  gitlab.go
pkg/kas/: BUILD.bazel  kas.go  kas_test.go
pkg/kascfg/: BUILD.bazel  config_example.yaml  config_example_test.go  kascfg.pb.go  kascfg.pb.validate.go  kascfg.proto  validation_test.go
pkg/kgb/: BUILD.bazel  kgb.go  kgb_test.go
pkg/ruby/: BUILD.bazel  copy_helper.bzl  kas-grpc.gemspec
pkg/ruby/lib/: kas-grpc.rb
pkg/ruby/lib/internal/module/agent_tracker/: agent_tracker_pb.rb
pkg/ruby/lib/internal/module/agent_tracker/rpc/: rpc_pb.rb  rpc_services_pb.rb
pkg/ruby/lib/internal/module/configuration_project/rpc/: rpc_pb.rb  rpc_services_pb.rb
pkg/ruby/lib/internal/module/modserver/: modserver_pb.rb
pkg/ruby/lib/internal/module/modshared/: modshared_pb.rb
pkg/wstunnel/: BUILD.bazel  client.go  main_test.go
proto/: BUILD.bazel  agent.proto
proto/agentrpc/: BUILD.bazel  agent.pb.go
ruby/: BUILD.bazel
ruby/lib/: kas-grpc.rb
(+482 files in other folders)
