load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_atlassian_bazel_tools//buildozer:def.bzl", "buildozer")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_go//go:def.bzl", "nogo")

# See https://github.com/bazelbuild/rules_go/blob/master/proto/core.rst#option-2-use-pre-generated-pbgo-files
# gazelle:proto disable_global

gazelle(
    name = "gazelle",
    prefix = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent",
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
    prefix = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent",
)

buildifier(
    name = "buildifier",
)

buildifier(
    name = "buildifier_check",
    mode = "check",
)

buildifier(
    name = "buildifier_fix",
    lint_mode = "fix",
)

buildozer(
    name = "buildozer",
    commands = "//build:buildozer_commands.txt",
)

nogo(
    name = "nogo",
    vet = True,
    visibility = ["//visibility:public"],
)
