load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_atlassian_bazel_tools//buildozer:def.bzl", "buildozer")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# See https://github.com/bazelbuild/bazel-gazelle#directives

# See https://github.com/bazelbuild/rules_go/blob/master/proto/core.rst#option-2-use-pre-generated-pbgo-files
# gazelle:proto disable_global
# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import

# We apply a patch below and use the added target instead of the default one to avoid proto conflicts.
# gazelle:resolve go github.com/envoyproxy/protoc-gen-validate/validate @com_github_envoyproxy_protoc_gen_validate//validate:go_custom_library

gazelle(
    name = "gazelle",
    prefix = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent",
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
    prefix = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent",
)

buildifier(
    name = "buildifier",
)

buildifier(
    name = "buildifier_check",
    mode = "check",
)

buildifier(
    name = "buildifier_fix",
    lint_mode = "fix",
)

buildozer(
    name = "buildozer",
    commands = "//build:buildozer_commands.txt",
)
