load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("cmd.bzl", "push_bundle")

prefix = "registry.gitlab.com/{STABLE_CONTAINER_REPOSITORY_PATH}/"

push_bundle(
    name = "tag-all",
    images = {
        prefix + "agentk:{STABLE_BUILD_IMAGE_TAG}": "//cmd/agentk:container",
        prefix + "kas:{STABLE_BUILD_IMAGE_TAG}": "//cmd/kas:container",
        prefix + "cli:{STABLE_BUILD_IMAGE_TAG}": "//cmd/cli:container",
        prefix + "agentk:{STABLE_BUILD_IMAGE_TAG}-race": "//cmd/agentk:container_race",
        prefix + "kas:{STABLE_BUILD_IMAGE_TAG}-race": "//cmd/kas:container_race",
    },
)

go_library(
    name = "cmd",
    srcs = [
        "build_info.go",
        "utils.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/tool/errz",
        "@com_github_ash2k_stager//:stager",
        "@com_github_spf13_pflag//:pflag",
    ],
)
