load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "it_test",
    size = "small",
    srcs = [
        "it_test.go",
        "main_test.go",
    ],
    race = "on",
    tags = [
        "external",
        "manual",
        "no-remote",
        "requires-network",
    ],
    deps = [
        "//cmd/agentk/agentkapp",
        "//cmd/kas/kasapp",
        "//pkg/kascfg",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_gitlab_gitlab_org_labkit//log",
        "@io_k8s_cli_runtime//pkg/genericclioptions",
        "@io_k8s_client_go//tools/clientcmd",
        "@org_golang_x_sync//errgroup",
    ],
)
