load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "gitlab.com/ash2k/gitlab-agent/cmd/agentg",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd:go_default_library",
        "//pkg/agentgapp:go_default_library",
    ],
)

go_binary(
    name = "agentg",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
