load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//cmd:cmd.bzl", "define_command_targets")

go_library(
    name = "agentk_lib",
    srcs = ["main.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v14/cmd/agentk",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "//cmd/agentk/agentkapp",
        "@io_k8s_client_go//plugin/pkg/client/auth",
    ],
)

define_command_targets(
    name = "agentk",
    binary_embed = [":agentk_lib"],
)
