load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//cmd:cmd.bzl", "define_command_targets")

go_library(
    name = "kas_lib",
    srcs = ["main.go"],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/cmd/kas",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "//cmd/kas/kasapp",
    ],
)

define_command_targets(
    name = "kas",
    binary_embed = [":kas_lib"],
)
