load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agentk",
    srcs = [
        "agentk.go",
        "gitops_worker.go",
        "logz.go",
        "resources_filter.go",
        "sync_worker.go",
        "synchronizer.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/agentk",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/agentrpc",
        "//internal/tools/errz",
        "//internal/tools/grpctools",
        "//internal/tools/logz",
        "//internal/tools/protodefault",
        "//internal/tools/retry",
        "//pkg/agentcfg",
        "@com_github_argoproj_gitops_engine//pkg/cache",
        "@com_github_argoproj_gitops_engine//pkg/engine",
        "@com_github_argoproj_gitops_engine//pkg/sync",
        "@com_github_argoproj_gitops_engine//pkg/utils/kube",
        "@com_github_ash2k_stager//:stager",
        "@com_github_go_logr_zapr//:zapr",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured",
        "@io_k8s_apimachinery//pkg/util/sets",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_cli_runtime//pkg/resource",
        "@io_k8s_client_go//rest",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "agentk_test",
    size = "small",
    srcs = [
        "agentk_test.go",
        "gitops_worker_test.go",
        "resources_filter_test.go",
    ],
    embed = [":agentk"],
    race = "on",
    deps = [
        "//internal/agentrpc",
        "//internal/agentrpc/mock_agentrpc",
        "//internal/tools/testing/kube_testing",
        "//internal/tools/testing/matcher",
        "//internal/tools/testing/mock_engine",
        "//pkg/agentcfg",
        "@com_github_argoproj_gitops_engine//pkg/cache",
        "@com_github_argoproj_gitops_engine//pkg/sync",
        "@com_github_argoproj_gitops_engine//pkg/sync/common",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured",
        "@io_k8s_cli_runtime//pkg/genericclioptions",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zaptest",
    ],
)
