load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agentk",
    srcs = [
        "agentk.go",
        "logz.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/agentk",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/agentrpc",
        "//internal/modules/modagent",
        "//internal/tools/grpctool",
        "//internal/tools/logz",
        "//internal/tools/retry",
        "//pkg/agentcfg",
        "@com_github_ash2k_stager//:stager",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "agentk_test",
    size = "small",
    srcs = ["agentk_test.go"],
    embed = [":agentk"],
    race = "on",
    deps = [
        "//internal/agentrpc",
        "//internal/agentrpc/mock_agentrpc",
        "//internal/tools/testing/matcher",
        "//pkg/agentcfg",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//zaptest",
    ],
)
