load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_compile")
load("//build:build.bzl", "copy_to_workspace")

proto_library(
    name = "agentrpc_proto",
    srcs = ["agentrpc.proto"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/agentcfg:agentcfg_proto"],
)

go_grpc_compile(
    name = "agent_grpc",
    tags = ["manual"],
    deps = [":agentrpc_proto"],
)

copy_to_workspace(
    name = "extract_generated",
    file_to_copy = "agentrpc.pb.go",
    label = ":agent_grpc",
    workspace_relative_target_directory = "internal/agentrpc",
)

go_library(
    name = "agentrpc",
    srcs = [
        "agentrpc.pb.go",
        "configuration_watcher.go",
        "obj_to_sync_watcher.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/agentrpc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/tool/grpctool",
        "//internal/tool/retry",
        "//pkg/agentcfg",
        "@com_github_golang_protobuf//proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "agentrpc_test",
    size = "small",
    srcs = [
        "configuration_watcher_test.go",
        "obj_to_sync_watcher_test.go",
    ],
    embed = [":agentrpc"],
    race = "on",
    deps = [
        "//internal/agentrpc/mock_agentrpc",
        "//internal/tool/testing/matcher",
        "//pkg/agentcfg",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_uber_go_zap//zaptest",
    ],
)
