load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gitaly",
    srcs = [
        "error.go",
        "feature_flags.go",
        "fetch_visitors.go",
        "path_fetcher.go",
        "path_visitor.go",
        "poller.go",
        "pool.go",
        "reference_discovery.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v14/internal/gitaly",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/gitaly/pktline",
        "@com_github_bmatcuk_doublestar_v2//:doublestar",
        "@com_gitlab_gitlab_org_gitaly_v14//proto/go/gitalypb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_custom_test(
    name = "gitaly_test",
    srcs = [
        "error_test.go",
        "fetch_visitors_test.go",
        "path_fetcher_test.go",
        "path_visitor_test.go",
        "poller_test.go",
        "reference_discovery_test.go",
    ],
    embed = [":gitaly"],
    deps = [
        "//internal/gitaly/pktline",
        "//internal/tool/testing/matcher",
        "//internal/tool/testing/mock_gitaly",
        "//internal/tool/testing/mock_internalgitaly",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_gitlab_gitlab_org_gitaly_v14//proto/go/gitalypb",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
