load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitlab",
    srcs = [
        "cache.go",
        "client.go",
        "client_options.go",
        "types.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/gitlab",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/tools/tracing",
        "@com_github_dgrijalva_jwt_go_v4//:jwt-go",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb",
        "@com_gitlab_gitlab_org_labkit//correlation",
    ],
)

go_test(
    name = "gitlab_test",
    size = "small",
    srcs = ["client_test.go"],
    embed = [":gitlab"],
    race = "on",
    deps = [
        "//internal/api",
        "@com_github_dgrijalva_jwt_go_v4//:jwt-go",
        "@com_github_google_go_cmp//cmp",
        "@com_github_gorilla_mux//:mux",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb",
        "@com_gitlab_gitlab_org_labkit//correlation",
    ],
)
