load("//build:build.bzl", "go_custom_test")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gitlab",
    srcs = [
        "client.go",
        "client_options.go",
        "error.go",
        "types.go",
    ],
    importpath = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/internal/gitlab",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/tool/errz",
        "//internal/tool/httpz",
        "//internal/tool/tlstool",
        "//internal/tool/tracing",
        "@com_github_dgrijalva_jwt_go_v4//:jwt-go",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_gitlab_gitlab_org_gitaly//proto/go/gitalypb",
        "@com_gitlab_gitlab_org_labkit//correlation",
        "@org_uber_go_zap//:zap",
    ],
)

go_custom_test(
    name = "gitlab_test",
    srcs = ["client_test.go"],
    deps = [
        ":gitlab",
        "//internal/tool/testing/mock_gitlab",
        "//internal/tool/testing/testhelpers",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
